<resources>
    <string name="app_name">Canary</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="empty_list_message">No projects were found.\nPress the <b>+</b> button to start a new project!</string>
    <string name="fab_content_desc">Create new project</string>
    <string name="start_record_desc">Start Recording</string>
    <string name="stop_record_desc">Stop Recording</string>
    <string name="untitled_project_name">Untitled Project</string>
    <string name="popup_desc">New Project</string>
    <string name="btn_cancel_desc">Cancel</string>
    <string name="record_activity_desc">Record some audio!</string>
    <string name="btn_create_desc">Create</string>
    <string name="et_project_title_hint">Enter name</string>
    <string name="new_project_create">Create</string>
    <string name="new_project_deny">Cancel</string>
    <string name="play_record_desc">Start Playing</string>
    <string name="fab_analyze_desc">Run audio analysis.</string>
    <string name="stop_playing">Stop playing</string>
    <string name="start_playing">Start playing</string>
</resources>