<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_gravity="center"
    android:padding="16dp"
    android:background="@color/blue_celadon">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/popup_desc"
        android:textColor="@color/white_cultured" />

    <EditText
        android:id="@+id/et_project_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@string/untitled_project_name"
        android:textColor="@color/white_cultured"
        android:hint="@string/et_project_title_hint"
        android:importantForAutofill="no"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_cancel_desc"
            android:textSize="12sp"
            android:textColor="@color/yellow_crayola"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btn_create"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="end"
            android:text="@string/btn_create_desc"
            android:textSize="12sp"
            android:textColor="@color/yellow_crayola"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

</LinearLayout>