<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecordActivity">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:text="@string/record_activity_desc"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="bottom|center"
        android:paddingBottom="16dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_start_record"
            android:layout_height="48dp"
            android:layout_width="128dp"
            android:contentDescription="@string/start_record_desc"
            android:src="@drawable/ic_baseline_fiber_manual_record_24" />

        <ImageButton
            android:id="@+id/btn_stop_record"
            android:layout_height="48dp"
            android:layout_width="128dp"
            android:contentDescription="@string/stop_record_desc"
            android:src="@drawable/ic_baseline_stop_24"/>

    </LinearLayout>

</FrameLayout>